[tool.poetry]
name = "attach_ext"
version = "0.1.0"
description = ""
authors = ["HIRANO Yoshitaka <yo@hirano.cc>"]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.dev-dependencies]
pytest = "^3.4"
mypy = "^0.782"
flake8 = "^3.8.3"
autopep8 = "^1.5.4"
boto3 = "^1.15.14"

[tool.poetry.scripts]
attach-ext = 'attach_ext.cli_attach_ext:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
